<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenTec</string>
    <string name="title_activity_main">OpenTec</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="event_default_data">No data!</string>
    <string name="event_default_location">No location found!</string>
    <string name="event_label_magnitude">Magnitude:</string>
    <string name="event_label_depth">Depth:</string>
    <string name="event_label_latitude">Latitude:</string>
    <string name="event_label_longitude">Longitude:</string>
    <string name="event_label_timestamp">Timestamp:</string>
    <string name="event_label_cause">Cause:</string>
    <string name="title_activity_image">ImageActivity</string>

</resources>
